--- a/app/views/environments/_ec2_type_resource_configuration.html.erb
+++ b/app/views/environments/_ec2_type_resource_configuration.html.erb
@@ -29,6 +29,8 @@
     <div id="<%=resource_type.name%>_ip_address"></div>
     <br />
     <div id="<%=resource_type.name%>_public_dns"></div>
+      <%= hidden_field_tag "#{resource_type.name}_ip_address_value","", :id => "#{resource_type.name}_ip_address_value"%>
+      <%= hidden_field_tag "#{resource_type.name}_public_dns_value","", :id => "#{resource_type.name}_public_dns_value"%>
       <%= hidden_field_tag :ami_id, Ami.first.id, :id => "#{resource_type.name}_ami_id"%>
       <%= hidden_field_tag "#{resource_type.name}_parents_list", resource_type.parents_list, :id => "#{resource_type.name}_parents_list"%>
       <%= f.hidden_field(:xpos, id: "#{resource_type.name}_xpos")%>
