--- a/app/assets/javascripts/environment.js.erb
+++ b/app/assets/javascripts/environment.js.erb
@@ -67,6 +67,7 @@ function requestProvision(){
 }
 
 $(function() {
+/* //Do not query resources one by one . Use the environment status check for this .
  if($("[id^=instance-label-]").length != 0)
  {
     $("[id^=instance-label-]").each(function(){
@@ -82,6 +83,7 @@ $(function() {
     }, <%= VisualCloudConfig[:status_check_interval] * 2000 %>);
   });
  }
+ */
 
  if($('.stack-status').length != 0)
  {
