--- a/app/assets/javascripts/environment.js.erb
+++ b/app/assets/javascripts/environment.js.erb
@@ -1,4 +1,7 @@
+
+/*
 function display_exist_elastic_ip_list(element,value) {
+
   //TODO Code smell . What is value 1 ?
   //Assuming 1 means 'Create new Elastic IP' checked , shouldn't the event be bound to
   //the radio box itself ?
@@ -7,6 +10,7 @@ function display_exist_elastic_ip_list(element,value) {
  else
    $('#'+element+'_elastic_ip_dropdown').parent().hide(); //hiding the drop-down
 }
+*/
 
 function save_environment(){
     var graphName = $('input#graph-name').val().trim();
@@ -93,11 +97,17 @@ $(function() {
     $('.stack-status').each(function(){
     var environment_id = $(this).attr("data-graph-id");
     var internal_status = setInterval(function(){
-      $.ajax({
+      var ajaxRequest = $.ajax({
         url: '/environment_status?id='+environment_id,
         type: 'GET'
       });
     }, <%= VisualCloudConfig[:status_check_interval] * 1500 %>);
+
+    /*
+    //TODO: Browsers should fetch the stack status
+    //from the DB only. Server should have a parallely running task
+    //that fetches the statuses of all existing stacks and update DB
+    //accordingly
 
     var original_status = setInterval(function(){
       $.ajax({
@@ -105,6 +115,7 @@ $(function() {
         type: 'GET'
       });
     }, <%= VisualCloudConfig[:status_check_interval] * 100000 %>);
+    */
 
   });
  }
@@ -192,6 +203,7 @@ $(document).ready(function(){
       });
   });
 
+/* //Do not query resources one by one . Use the environment status check for this .
  if($("[id^=instance-label-]").length != 0)
  {
     $("[id^=instance-label-]").each(function(){
@@ -205,6 +217,7 @@ $(document).ready(function(){
       });
   });
  }
+*/
 
 });
 
@@ -313,4 +326,26 @@ function requestProvision(){
       hideLoading();
     }
   });
+}
+
+function startStatusPoll(environmentId){
+  $(document).ready(function(){
+    if($('.stack-status-icon').length != 0){
+      setInterval(function(){
+        $.ajax({
+          url: '/stack_info?id=' + environmentId,
+          type: 'GET'
+        }).done(function(data){
+          var stackStatus = data.status;
+          setStatusIcon(stackStatus);
+          //Set the output values now
+        });
+      }, <%= VisualCloudConfig[:status_check_interval] * 2000 %>);
+    }
+  });
+}
+
+function setStatusIcon(stackStatus){
+  $(".stack-status-icon").hide();
+  $('#status-icon-'+stackStatus).show();
 }
