removed unused field 'large_icon' from resource type model

--- a/app/views/environments/_instance_templates.html.erb
+++ b/app/views/environments/_instance_templates.html.erb
@@ -1,6 +1,6 @@
 <% resource_types.each do |resource_type| %>
   <div class="<%= resource_type.name %>-instance hide">
-    <%= image_tag("icons/#{resource_type.large_icon}", size: '55x55', class: 'instance-icon')%>
+    <%= image_tag("icons/#{resource_type.small_icon}", size: '55x55', class: 'instance-icon')%>
     <div class="instance-type-label"></div>
     <div style="clear:both"></div>
     <span class="instance-label" rel="tooltip" data-placement="bottom">
