--- a/app/views/environments/_rds_configuration.html.erb
+++ b/app/views/environments/_rds_configuration.html.erb
@@ -28,8 +28,8 @@
         <%= check_box_tag "#{resource_type.name}_multiAZ", value = "", checked = false%></div>
         <div class="span3">Multi AZ</div>
       </div>
-      <div id="<%= resource_type.name %>_public_dns"></div>
-      <%= hidden_field_tag "#{resource_type.name}_public_dns_value","", :id => "#{resource_type.name}_public_dns_value"%>
+      <div id="<%= resource_type.name %>_endpoint_ip"></div>
+      <div id="<%= resource_type.name %>_endpoint_port"></div>
       <%= hidden_field_tag "#{resource_type.name}_parents_list", resource_type.parents_list, :id => "#{resource_type.name}_parents_list"%>
       <%= f.hidden_field(:xpos, id: "#{resource_type.name}_xpos")%>
       <%= f.hidden_field(:ypos, id: "#{resource_type.name}_ypos")%>
