--- a/app/views/environments/_elb_configuration.html.erb
+++ b/app/views/environments/_elb_configuration.html.erb
@@ -8,8 +8,7 @@
     <%= simple_form_for Instance.new, url: '' , html: { id: "#{resource_type.name}-config-frm"} do |f|%>
       <%= f.input :label, input_html: { id: "#{ resource_type.name}_label", class: 'instance_label'} %>
       <br />
-      <div id="<%= resource_type.name %>_public_dns"></div>
-      <%= hidden_field_tag "#{resource_type.name}_public_dns_value","", :id => "#{resource_type.name}_public_dns_value"%>
+      <div id="<%= resource_type.name %>_dns_name"></div>
       <%= hidden_field_tag "#{resource_type.name}_parents_list", resource_type.parents_list, :id => "#{resource_type.name}_parents_list"%>
   </div>
   <div class="modal-footer">
