Modified comment, aligning private methods

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -33,7 +33,7 @@
 </div>
 <h4 class="span2">Environments</h4>
   <button class="btn btn-inverse" id="new_environment" title='Create new environment' rel='tooltip' data-placement='right'>
-    <i class='icon-plus-sign'></i>
+    <i class='icon-plus-sign'></i> New environment
   </button>
 
 <%= render 'project_environments' %>
