Changed size of icons on the toolbar

--- a/app/views/environments/_toolbar.html.erb
+++ b/app/views/environments/_toolbar.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar navbar-inverse">
 <div class="navbar-inner">
   <ul class="nav nav-pills">
-    <li><a id="graph-save" href="javascript:void(0)" title='Save' rel='tooltip' data-placement='left'><i class='icon-save'></i></a></li>
-  </ul> 
+    <li><a id="graph-save" href="javascript:void(0)" title='Save' rel='tooltip' data-placement='left'><i class='icon-save icon-large'></i></a></li>
+  </ul>
   <%= render 'project_environment' %> 
 </div>
 </div>
