1.provision spec added in model and controller,2.removed updating the config attributes methods fro environments,3. removed mocking redis

--- a/app/assets/javascripts/environment.js.erb
+++ b/app/assets/javascripts/environment.js.erb
@@ -63,7 +63,7 @@ function requestProvision(){
   }
   showLoading();
   $.ajax({
-    url: '/provision_environment?id='+graphId,
+    url: '/provision?id='+graphId,
     type: 'POST',
     dataType: "script",
     contentType: 'application/json',
